# angzarr

./: .clang-format  .claude.md  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .mcp.json  .tasks.md  .versionator.yaml  ABI_TEST_RESULTS.md  ADAPTER_LAYER.md  CLAUDE.md  COMMON_PROBLEMS.md  Cargo.toml  Claude.todo.md  Containerfile  Dockerfile  EVENT_STORE_RESEARCH.md  GEMINI.md  KERNEL_EVENTS.md  KERNEL_STRUCTURE.md  LICENSE  LINUX_KERNEL_LESSONS.md  LINUX_TEST_MAPPING.md  MIGRATION_STRATEGY.md  NAMING_STRATEGY.md  PITCH.md  README.md  TASKS.md  TOOLING.md  artifacthub-repo.yml  bacon.toml  build.json  build.rs  config.embedded.yaml  config.example.yaml  config.standalone.yaml  docker-compose.yml  justfile  (+12 more)
angzarr-abi-test/: Cargo.toml  README.md  build.rs
angzarr-abi-test/src/: lib.rs
angzarr-abi-test/tests/: c_reference_compat.rs  ffi_compat.rs  list_compat.rs  rbtree_compat.rs  types_compat.rs
angzarr-client/rust/: Cargo.toml
angzarr-client/rust/src/: builder.rs  client.rs  convert.rs  error.rs  lib.rs  traits.rs
angzarr-core/: Cargo.toml
angzarr-core/src/: lib.rs  types.rs
angzarr-kernel/: Cargo.toml  linker.ld  x86_64-unknown-none.json
angzarr-kernel/.cargo/: config.toml
angzarr-kernel/src/: boot.s  main.rs
angzarr-linux-compat/: Cargo.toml  README.md
angzarr-linux-compat/src/: error.rs  lib.rs  list.rs  rbtree.rs  types.rs
angzarr-list/: Cargo.toml  build.rs
angzarr-list/src/: lib.rs
angzarr-mm/: Cargo.toml
angzarr-mm/src/: allocator.rs  lib.rs
angzarr-rbtree/: Cargo.toml
angzarr-rbtree/src/: lib.rs
angzarr-sync/: Cargo.toml
angzarr-sync/src/: lib.rs  spinlock.rs
angzarr-test-framework/: Cargo.toml
angzarr-test-framework/features/: list.feature  memory.feature  rbtree.feature  synchronization.feature
angzarr-test-framework/src/: helpers.rs  lib.rs
angzarr-test-framework/tests/: kernel_tests.rs
client/cpp/: CMakeLists.txt  README.md  justfile  justfile.container
client/cpp/.devcontainer/: Containerfile
client/cpp/cmake/: angzarr-client-config.cmake.in
client/cpp/src/: aggregate.cpp  cloudevents.cpp  command_handler.cpp  helpers.cpp  router.cpp  saga_context.cpp  upcaster.cpp  validation.cpp
client/cpp/tests/: builder_test.cpp  compensation_test.cpp  error_introspection_test.cpp  rejection_handler_response_test.cpp  router_test.cpp  state_building_test.cpp  unified_router_test.cpp
client/python/: .coverage  README.md  justfile  justfile.container  pyproject.toml
client/python/.devcontainer/: Containerfile
client/python/angzarr_client/: __init__.py  aggregate.py  aggregate_handler.py  builder.py  client.py  cloudevents.py  compensation.py  errors.py  event_packing.py  handler_protocols.py  helpers.py  process_manager.py  process_manager_handler.py  projector.py  projector_handler.py  protoname.py  router.py  saga.py  saga_context.py  saga_handler.py  server.py  state_builder.py  unified_router.py  upcaster.py  upcaster_handler.py  validation.py  wrappers.py
client/python/mutants/: mutmut-stats.json
client/python/tests/: __init__.py  fixtures.py  test_aggregate.py  test_aggregate_handler.py  test_builder.py  test_client.py  test_command_rejected_error.py  test_errors.py  test_event_packing.py  test_helpers.py  test_identity.py  test_process_manager.py  test_process_manager_handler.py  test_projector.py  test_projector_handler.py  test_rejected.py  test_rejection_handler_response.py  test_router.py  test_saga.py  test_saga_handler.py  test_unified_router.py  test_upcaster.py  test_validation.py  test_wrappers.py
client/rust/: Cargo.toml  README.md  build.rs  justfile  justfile.container
client/rust/.devcontainer/: Containerfile
client/rust/angzarr-macros/: Cargo.toml
client/rust/proto/: examples
client/rust/src/: builder.rs  client.rs  convert.rs  error.rs  handler.rs  lib.rs  router.rs  server.rs  traits.rs  validation.rs
client/rust/tests/: features.rs
examples/cpp/: CMakeLists.txt  Containerfile  justfile  justfile.container  skaffold.yaml  values.yaml
examples/cpp/.devcontainer/: Containerfile  devcontainer.json  post-create.sh
examples/cpp/cart/: CMakeLists.txt
examples/cpp/customer/: CMakeLists.txt
examples/cpp/features/: Gemfile  hand.feature  process_manager.feature  projector.feature  saga.feature
examples/cpp/fulfillment/: CMakeLists.txt
examples/cpp/hand-flow/: CMakeLists.txt
examples/cpp/hand-flow-oo/: CMakeLists.txt
examples/cpp/helm/: Chart.yaml  values.yaml
examples/cpp/inventory/: CMakeLists.txt
examples/cpp/order/: CMakeLists.txt
examples/cpp/prj-output/: CMakeLists.txt
examples/cpp/prj-output-oo/: CMakeLists.txt
examples/cpp/product/: CMakeLists.txt
examples/cpp/projector-receipt/: CMakeLists.txt
examples/cpp/saga-cancellation/: .gitignore  CMakeLists.txt
examples/cpp/saga-fulfillment/: CMakeLists.txt
examples/cpp/saga-loyalty-earn/: CMakeLists.txt  justfile
examples/cpp/tests/: CMakeLists.txt  all_steps.cpp  common_steps.cpp  hand_steps.cpp  player_steps.cpp  pm_context.hpp  process_manager_steps.cpp  projector_context.hpp  projector_steps.cpp  runner.cpp  saga_steps.cpp  table_steps.cpp  test_context.hpp  test_utils.hpp
examples/python/: .coverage  Containerfile  Containerfile.dev  README.md  demo.py  discount_logic.py  generate_proto.sh  justfile  justfile.container  pyproject.toml  run_game.py  service.justfile  skaffold.yaml  standalone.yaml  values-debug.yaml  values-k3s.yaml  values.yaml
examples/python/.devcontainer/: Containerfile  devcontainer.json  post-create.sh
examples/python/agg-fulfillment/: main.py  pyproject.toml  test_fulfillment_logic.py
examples/python/agg-hand/: main.py  pyproject.toml
examples/python/agg-inventory/: conftest.py  main.py  test_inventory_logic.py
examples/python/agg-order/: .gitignore  conftest.py  justfile  main.py  pyproject.toml  test_order_logic.py
examples/rust/: Cargo.toml  Containerfile  Containerfile.dev  README.md  justfile  justfile.container  service.justfile  skaffold.yaml  standalone.yaml  values-debug.yaml  values.yaml
tests/acceptance/: Cargo.toml
(+3694 files in other folders)
