[workspace]
members = [
    ".",
    "examples/rust/common",
    "examples/rust/customer",
    "examples/rust/product",
    "examples/rust/inventory",
    "examples/rust/order",
    "examples/rust/cart",
    "examples/rust/fulfillment",
    "examples/rust/saga-loyalty-earn",
    "examples/rust/saga-fulfillment",
    "examples/rust/saga-cancellation",
    "examples/rust/process-manager-fulfillment",
    "examples/rust/projectors/accounting",
    "examples/rust/projectors/logging",
    "examples/rust/projectors/web",
    "examples/rust/e2e",
]
resolver = "2"

[workspace.dependencies]
# gRPC
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-health = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "v5"] }
chrono = "0.4"
hex = "0.4"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
cucumber = "0.21"

# Storage (for projectors)
sqlx = { version = "0.8", features = ["runtime-tokio"] }
sqlx-postgres = { package = "sqlx", version = "0.8", features = ["runtime-tokio", "postgres"] }
sqlx-sqlite = { package = "sqlx", version = "0.8", features = ["runtime-tokio", "sqlite"] }
sea-query = "0.32"
sea-query-binder = { version = "0.7" }
sea-query-binder-postgres = { package = "sea-query-binder", version = "0.7", features = ["sqlx-postgres"] }
sea-query-binder-sqlite = { package = "sea-query-binder", version = "0.7", features = ["sqlx-sqlite"] }

# Local crates
angzarr = { path = "." }
common = { path = "examples/rust/common" }

[package]
name = "angzarr"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Abbitt"]
description = "Schema-first CQRS/ES framework for polyglot business logic"
license-file = "LICENSE"

[features]
# Default features - common production setup
default = ["amqp", "mongodb"]

# Messaging backends
amqp = ["dep:lapin", "dep:deadpool-lapin"]
kafka = ["dep:rdkafka"]
pubsub = ["dep:google-cloud-pubsub", "dep:google-cloud-auth", "dep:google-cloud-googleapis"]
sns-sqs = ["dep:aws-sdk-sns", "dep:aws-sdk-sqs", "dep:aws-config"]
channel = []  # In-memory event bus, no external deps

# Storage backends
mongodb = ["dep:mongodb"]
postgres = ["dep:sqlx", "dep:sea-query", "dep:sea-query-binder", "sqlx/postgres", "sea-query-binder/sqlx-postgres"]
sqlite = ["dep:sqlx", "dep:sea-query", "dep:sea-query-binder", "sqlx/sqlite", "sea-query-binder/sqlx-sqlite"]
redis = ["dep:redis"]

# Testing utilities
lossy = ["dep:rand"]

# Convenience
standalone = ["sqlite", "channel"]

# All features for development
full = ["amqp", "kafka", "pubsub", "sns-sqs", "channel", "mongodb", "postgres", "sqlite", "redis", "lossy"]

[dependencies]
# gRPC
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage - Query builder approach (like jOOQ) - optional for postgres/sqlite
sea-query = { version = "0.32", optional = true }
sea-query-binder = { version = "0.7", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }

# Core utilities
uuid = { version = "1", features = ["v4", "v5"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
chrono = "0.4"
hex = "0.4"
serde_json = "1"

# Protobuf reflection (for logging projector)
prost-reflect = { version = "0.14", features = ["serde"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (OpenTelemetry-compatible via metrics-exporter-otlp)
metrics = "0.24"

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"

# AMQP/RabbitMQ (optional)
lapin = { version = "2", optional = true }
deadpool-lapin = { version = "0.12", optional = true }

# MongoDB (optional)
mongodb = { version = "3", optional = true }

# Redis (optional)
redis = { version = "0.27", features = ["aio", "connection-manager", "tokio-comp"], optional = true }

# Kafka (optional)
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"], optional = true }

# Google Pub/Sub (optional)
google-cloud-pubsub = { version = "0.29", optional = true }
google-cloud-auth = { version = "0.19", optional = true }
google-cloud-googleapis = { version = "0.15", optional = true }

# AWS SNS/SQS (optional)
aws-sdk-sns = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# Random (for lossy testing bus)
rand = { version = "0.9", optional = true }

# Kubernetes API (for gateway service discovery)
kube = { version = "0.98", features = ["runtime", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_29"] }

# DNS resolution (for SRV-based service discovery)
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Unix process management (for standalone orchestrator)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "angzarr-aggregate"
path = "src/bin/angzarr_aggregate.rs"

[[bin]]
name = "angzarr-projector"
path = "src/bin/angzarr_projector.rs"

[[bin]]
name = "angzarr-saga"
path = "src/bin/angzarr_saga.rs"

[[bin]]
name = "angzarr-gateway"
path = "src/bin/angzarr_gateway.rs"

[[bin]]
name = "angzarr-stream"
path = "src/bin/angzarr_stream.rs"

[[bin]]
name = "angzarr-log"
path = "src/bin/angzarr_log.rs"

[[bin]]
name = "angzarr-standalone"
path = "src/bin/angzarr_standalone.rs"

[[bin]]
name = "angzarr-event-projector"
path = "src/bin/angzarr_event_projector.rs"
required-features = ["postgres"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
cucumber = "0.21"
futures = "0.3"
common = { path = "examples/rust/common" }
serial_test = "3"

[[test]]
name = "container_integration"
harness = false

[[test]]
name = "gateway_integration"
path = "tests/integration/gateway_test.rs"

[[test]]
name = "streaming_integration"
path = "tests/integration/streaming_test.rs"

[[test]]
name = "query_integration"
path = "tests/integration/query_test.rs"

[[test]]
name = "storage_mongodb"
required-features = ["mongodb"]

[[test]]
name = "storage_redis"
required-features = ["redis"]

[[test]]
name = "storage_postgres"
required-features = ["postgres"]

[[test]]
name = "storage_sqlite"
required-features = ["sqlite"]

# === Build Profiles ===

# Dev profile - fast compilation, slow runtime (default for `cargo build`)
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256  # More units = faster compile, slower code

# Dev with some optimization - good balance for local testing
[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies, not our code

# Fast-dev profile - even faster compilation for rapid iteration
# Usage: cargo build --profile fast-dev
[profile.fast-dev]
inherits = "dev"
opt-level = 0
debug = 0           # Skip debug info generation
incremental = true
codegen-units = 512

# Container dev profile - fast compilation for container builds
# No incremental (Docker doesn't preserve target dir between builds)
# Usage: cargo build --profile container-dev
[profile.container-dev]
inherits = "dev"
opt-level = 0
debug = true           # Full debug info for debugging in containers
incremental = false    # Pointless in containers
codegen-units = 256    # Max parallelism

# Test profile - fast compilation for running tests
# Usage: cargo test (automatically used)
[profile.test]
opt-level = 0
debug = 2           # Full debug info for test failures
incremental = true

# Release profile - slow compilation, fast runtime (for production)
[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Maximum link-time optimization
codegen-units = 1   # Single codegen unit for best optimization
strip = true        # Strip symbols for smaller binaries
panic = "abort"     # Abort on panic (smaller binaries, no unwinding)

# Production profile - maximum optimization with all features
# Usage: cargo build --profile production --features full
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
