[workspace]
members = [
    ".",
    "crates/trivial-delegation",
    "xtask",
]
resolver = "2"

[package]
name = "angzarr"
version = "0.1.3"
edition = "2021"
authors = ["Benjamin Abbitt"]
description = "Schema-first CQRS/ES framework for polyglot client logic"
license = "AGPL-3.0-only"

[features]
# Default: otel for observability
default = ["otel"]

# =============================================================================
# Deployment Profiles (opinionated stacks)
# =============================================================================
# Note: standalone mode is now in the separate angzarr-standalone crate
# Note: sqlite is always compiled (no feature gate) for local orchestration support
# k8s: Generic Kubernetes with Postgres + RabbitMQ
k8s = ["postgres", "amqp", "otel", "dep:kube", "dep:k8s-openapi"]
# gcp-cloudrun: GCP serverless with Cloud SQL + Pub/Sub + GCS
gcp-cloudrun = ["postgres", "pubsub", "gcs", "otel"]
# gcp-k8s: GCP Kubernetes with Bigtable + Pub/Sub + GCS
gcp-k8s = ["bigtable", "pubsub", "gcs", "otel"]
# aws-k8s: AWS Kubernetes with DynamoDB + SNS/SQS + S3
aws-k8s = ["dynamo", "sns-sqs", "s3", "otel"]

# =============================================================================
# Messaging Backends
# =============================================================================
amqp = ["dep:lapin", "dep:deadpool-lapin"]
kafka = ["dep:rdkafka"]
nats = ["dep:async-nats"]
pubsub = ["dep:gcloud-pubsub", "dep:gcloud-googleapis"]
sns-sqs = ["dep:aws-sdk-sns", "dep:aws-sdk-sqs", "dep:aws-config"]

# =============================================================================
# Storage Backends
# =============================================================================
# Note: sqlx/sea-query are always compiled with sqlite; these features add additional backends
postgres = ["sqlx/postgres", "sqlx/uuid", "sea-query-binder/sqlx-postgres"]
# sqlite is always enabled (no feature gate) - required for local orchestration
redis = ["dep:redis"]
immudb = ["sqlx/postgres", "sqlx/uuid"]  # Uses pgsql wire protocol
bigtable = ["dep:bigtable_rs"]
dynamo = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

# =============================================================================
# Payload Store Backends (claim check pattern)
# =============================================================================
gcs = ["dep:gcloud-storage"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

# =============================================================================
# Observability & Utilities
# =============================================================================
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-appender-tracing", "dep:tracing-opentelemetry"]
lossy = ["dep:rand"]
# Test utilities for integration tests
test-utils = []
# Enable #[coverage(off)] attribute on nightly (for trivial_delegation)
coverage_nightly = []

# =============================================================================
# All Features (for CI/development)
# =============================================================================
# Note: sqlite is always compiled, not listed here
# Note: standalone mode moved to separate angzarr-standalone crate
full = ["k8s", "gcp-cloudrun", "gcp-k8s", "aws-k8s", "kafka", "redis", "immudb", "lossy"]
# full-musl: For musl static builds - excludes kafka (requires librdkafka with OpenSSL)
# GCP crates use rustls-tls feature for musl compatibility
full-musl = ["k8s", "gcp-cloudrun", "gcp-k8s", "aws-k8s", "redis", "immudb", "lossy"]

[dependencies]
# Client library (proto types, extension traits, client implementations)
# NOTE: Extracted to separate repo - using git dependency until crates.io publish
angzarr-client = { git = "https://github.com/angzarr-io/angzarr-client-rust.git" }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "transport"] }
tonic-health = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14.5"
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"
http-body = "1"
bytes = "1"
hyper-util = { version = "0.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage - Query builder approach (like jOOQ)
# SQLite is always compiled for local orchestration support
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Retry with backoff
backon = "1"

# HTTP client for external service calls
# Using rustls-tls for musl static build compatibility (no OpenSSL dependency)
# ring provides the crypto backend for rustls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Core utilities
uuid = { version = "1", features = ["v4", "v5"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
chrono = "0.4"
hex = "0.4"
serde_json = "1"
inventory = "0.3"

# Protobuf reflection (for logging projector)
prost-reflect = { version = "0.16", features = ["serde"] }

# CloudEvents SDK (for cloudevents projector)
cloudevents-sdk = "0.9"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (optional, feature-gated)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"], optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"

# AMQP/RabbitMQ (optional)
lapin = { version = "2", optional = true }
deadpool-lapin = { version = "0.12", optional = true }

# Redis (optional)
redis = { version = "0.27", features = ["aio", "connection-manager", "tokio-comp"], optional = true }

# Kafka (optional)
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"], optional = true }

# NATS JetStream (optional)
async-nats = { version = "0.38", optional = true }

# Google Pub/Sub (optional)
# gcloud-pubsub is yoshidan's crate (was google-cloud-pubsub before name donation to Google)
gcloud-pubsub = { version = "1.6", optional = true }
gcloud-googleapis = { version = "1.3", features = ["pubsub"], optional = true }

# AWS SNS/SQS (optional)
aws-sdk-sns = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# AWS S3 (optional, for payload store)
aws-sdk-s3 = { version = "1", optional = true }

# AWS DynamoDB (optional, for event store)
aws-sdk-dynamodb = { version = "1", optional = true }

# Google Cloud Storage (optional, for payload store)
# gcloud-storage is yoshidan's crate (was google-cloud-storage before name donation to Google)
gcloud-storage = { version = "1.2", optional = true }

# Google Cloud Bigtable (optional, for event store)
bigtable_rs = { version = "0.2", optional = true }

# Random (for lossy testing bus)
rand = { version = "0.9", optional = true }

# Kubernetes API (for gateway service discovery) - optional, k8s feature only
kube = { version = "0.98", features = ["runtime", "client"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_29"], optional = true }

sha2 = "0.10.9"
mutants = "0.0.4"
trivial-delegation = { path = "crates/trivial-delegation" }

# Unix process management (for standalone orchestrator)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs", "user"] }

[lints.rust]
# coverage_nightly is a custom cfg used for conditional #[coverage(off)] on nightly
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"

[[bin]]
name = "angzarr-aggregate"
path = "src/bin/angzarr_aggregate.rs"

[[bin]]
name = "angzarr-projector"
path = "src/bin/angzarr_projector.rs"

[[bin]]
name = "angzarr-saga"
path = "src/bin/angzarr_saga.rs"

[[bin]]
name = "angzarr-process-manager"
path = "src/bin/angzarr_process_manager.rs"

[[bin]]
name = "angzarr-log"
path = "src/bin/angzarr_log.rs"

[[bin]]
name = "angzarr-stream"
path = "src/bin/angzarr_stream.rs"

[[bin]]
name = "angzarr-event-projector"
path = "src/bin/angzarr_event_projector.rs"
required-features = ["postgres"]

[[bin]]
name = "angzarr-upcaster"
path = "src/bin/angzarr_upcaster.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
cucumber = "0.21"
futures = "0.3"
serial_test = "3"
testcontainers = "0.27"
hex = "0.4"
rand = "0.9"

# =============================================================================
# Contract Test Binaries
# =============================================================================
# These tests verify that storage and bus implementations correctly fulfill
# their trait contracts. Each backend gets its own test binary with the
# required feature flag, ensuring:
#   1. Tests only compile when the backend is available
#   2. Clear error messages when running without required features
#   3. Isolated test runs per backend for CI parallelization
#
# Storage tests verify: EventStore, SnapshotStore, PositionStore traits
# Bus tests verify: EventBus trait (publish, subscribe, ack/nack, DLQ)
# =============================================================================

# --- Storage Contract Tests (Macro-based) ---
# All storage backends use macro-based tests for consistency and reduced overhead.
# Tests are organized by trait (EventStore, SnapshotStore, PositionStore) with
# reusable test suites in tests/storage/*.rs.

[[test]]
name = "storage_redis"
# Redis provides high-performance caching for snapshots. Testing ensures
# snapshot store/restore works correctly with Redis's eventual consistency model.
required-features = ["redis"]

[[test]]
name = "storage_immudb"
# ImmuDB provides cryptographically verifiable event storage. Testing ensures
# events persist correctly via the PostgreSQL wire protocol adapter.
required-features = ["immudb"]

[[test]]
name = "storage_nats"
# NATS JetStream provides distributed event storage with replay. Testing ensures
# events, snapshots, and positions persist correctly in the JetStream KV store.
required-features = ["nats"]

[[test]]
name = "storage_sqlite"
# SQLite provides embedded storage for standalone mode. Testing ensures all three
# stores (Event, Snapshot, Position) work correctly with in-memory SQLite.
# Note: sqlite is always compiled, no required-features needed

[[test]]
name = "storage_postgres"
# PostgreSQL provides production-grade storage. Testing ensures all three stores
# work correctly with full SQL support including historical snapshot queries.
required-features = ["postgres"]

# --- Bus Contract Tests ---

[[test]]
name = "bus_nats"
# NATS JetStream as event bus. Testing ensures publish/subscribe semantics,
# consumer groups, and message acknowledgment work correctly.
required-features = ["nats"]

[[test]]
name = "bus_amqp"
# RabbitMQ/AMQP as event bus. Testing ensures exchange/queue bindings,
# message routing, acknowledgment, and dead-letter queue handling work correctly.
required-features = ["amqp"]

[[test]]
name = "bus_kafka"
# Apache Kafka as event bus. Testing ensures topic partitioning, consumer groups,
# offset management, and at-least-once delivery semantics work correctly.
required-features = ["kafka"]

[[test]]
name = "bus_pubsub"
# Google Cloud Pub/Sub as event bus. Testing ensures topic/subscription management,
# message ordering, and acknowledgment deadlines work correctly with the emulator.
required-features = ["pubsub"]

[[test]]
name = "bus_sns_sqs"
# AWS SNS/SQS as event bus. Testing ensures SNS fan-out to SQS queues,
# message attributes, and visibility timeout handling work correctly with LocalStack.
required-features = ["sns-sqs"]

# === Build Profiles ===

# Dev profile - optimized for size to keep disk usage sane
[profile.dev]
opt-level = "z"
debug = 0
strip = true
incremental = true

# Container dev profile - optimized for size, no incremental
# Usage: cargo build --profile container-dev
[profile.container-dev]
inherits = "dev"
incremental = false

# Test profile - optimized for size
# Usage: cargo test (automatically used)
[profile.test]
opt-level = "z"
debug = 0
strip = true
incremental = true

# Release profile - slow compilation, fast runtime (for production)
[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Maximum link-time optimization
codegen-units = 1   # Single codegen unit for best optimization
strip = true        # Strip symbols for smaller binaries
panic = "abort"     # Abort on panic (smaller binaries, no unwinding)

# Production profile - maximum optimization with all features
# Usage: cargo build --profile production --features full
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
